- Option stopping pollution of impassable tiles also covers volcanic eruptions
- Fix describe_states_of_units_on_menu setting being ignored
- Touch up action descriptions for auto precision striking and fortified exhausted units

* RELEASE 19
- Option to stop pollution from appearing on impassable tiles
- Rework UnitRCMIcons.pcx so busy & combat units can be given special icons
- Fix bombers not doing stack bombard and not showing as attack-capable on right-click menu
- Fix crash when opening right-click menu with fleeing automated workers
- Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units
- Fix dont_escort_unflagged_units option interfering with group movement of units
- Put right-click menu sword icon on non-empty armies
- Describe the action of passenger units as "Transported" instead of "Fortified"
- Describe the action of units waiting to fortify as "Fortified" instead of leaving it unreplaced

* RELEASE 18B
- Fix Wake/Activate replacement not working on Steam version

* RELEASE 18
- Unit limits
- Expand AI two-city start to any number of cities
  - Config option has been renamed to ai_multi_city_start
- AI's starter cities in multi-city start can begin with improvements, inc. "extra palaces" which respawn like the real palace
- Right-click menu enhancements
  - Place icons next to units showing movement and combat status
  - Replace Wake/Activate with descriptions of what the units are doing
  - Gray out units if they have no remaining moves
  - Stop grouping automated and non-automated workers
- Can set multiplier on AI research rate (replaces halve_ai_research_rate)
- Option to allow upgrades in any city
- Option to stop the map generator from placing volcanos
- Apply GridOn setting from conquests.ini after loading a save
- Fix resource generation not always updated after an input was gained or lost due to city improv change