@@ -168,6 +168,7 @@ struct c3x_config {
 	bool disallow_useless_bombard_vs_airfields;
 	enum line_drawing_override draw_lines_using_gdi_plus;
 	bool compact_luxury_display_on_city_screen;
+	bool warn_when_chosen_building_would_replace_another;
 	bool enable_city_capture_by_barbarians;
 	bool share_visibility_in_hoseat;
 	bool allow_precision_strikes_against_tile_improvements;
