@@ -110,4 +110,11 @@ $CITY0 can no longer work on a $UNIT1 because our civilization can only command 
 Zoom to City.
 Sounds Good.
 
+#C3X_WARN_ABOUT_BUILDING_REPLACEMENT
+#advisor Domestic Happy
+Constructing the $IMPROVEMENT0 in this city would replace its $IMPROVEMENT1.
+#itemlist
+That's fine.
+Nevermind then.
+
 # ; This line must remain at end of file
