@@ -99,6 +99,11 @@ draw_lines_using_gdi_plus = wine
 ; neatly inside the box.
 compact_luxury_display_on_city_screen = false
 
+; Causes the domestic advisor to ask for confirmation before setting city production to a building that would replace another already built in the
+; city. It's similar to how the domestic advisor warns you before a production switch would waste shields. Useful for modded games where you might not
+; know which buildings replace which.
+warn_when_chosen_building_would_replace_another = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
